--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
       run: mkdir -p projects/site.test && echo '<?php echo phpversion();' > projects/site.test/index.php
 
     - name: Build the stack PHP-82 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-82 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-82.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-82.yml docker-compose.yml.bk && make upb
 
     - name: Test DB
       run: sleep 15 && docker run --network container:docker-compose-php_nginx_1 mikesplain/telnet db 3306
@@ -44,7 +44,7 @@ jobs:
 
 
     - name: Build the stack PHP-81 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-81 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-81.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-81 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-81.yml docker-compose.yml.bk && make upb
     - name: Test PHP-FPM
       run: docker run --network container:docker-compose-php_nginx_1 mikesplain/telnet php-81 9000
     - name: Test Nginx localhost
@@ -54,7 +54,7 @@ jobs:
 
 
     - name: Build the stack PHP-8 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-8 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-8.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-8 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-8.yml docker-compose.yml.bk && make upb
     - name: Test PHP-FPM
       run: docker run --network container:docker-compose-php_nginx_1 mikesplain/telnet php-8 9000
     - name: Test Nginx localhost
@@ -64,7 +64,7 @@ jobs:
 
 
     - name: Build the stack PHP-74 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-74 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-74.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-php-74 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp templates/docker-compose-php-74.yml docker-compose.yml.bk && make upb
     - name: Test PHP-FPM
       run: docker run --network container:docker-compose-php_nginx_1 mikesplain/telnet php-74 9000
     - name: Test Nginx localhost
@@ -74,7 +74,7 @@ jobs:
 
 
     - name: Build the stack Apache PHP-81 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-81 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-81/config/templates/site.test.conf docker/apache-php-81/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-81/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-81.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-81 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-81/config/templates/site.test.conf docker/apache-php-81/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-81/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-81.yml docker-compose.yml.bk && make upb
     - name: Test Nginx localhost
       run: docker run --network container:docker-compose-php_nginx_1 appropriate/curl -s --retry 1 --retry-connrefused http://super:demo@localhost/ | grep '8.1'
     - name: Stop containers
@@ -82,7 +82,7 @@ jobs:
 
 
     - name: Build the stack Apache PHP-74 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-74 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-74/config/templates/site.test.conf docker/apache-php-74/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-74/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-74.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-74 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-74/config/templates/site.test.conf docker/apache-php-74/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-74/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-74.yml docker-compose.yml.bk && make upb
     - name: Test Nginx localhost
       run: docker run --network container:docker-compose-php_nginx_1 appropriate/curl -s --retry 1 --retry-connrefused http://super:demo@localhost/ | grep '7.4'
     - name: Stop containers
@@ -90,7 +90,7 @@ jobs:
 
 
     - name: Build the stack Apache PHP-56 and hack with default.conf
-      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-56 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-56/config/templates/site.test.conf docker/apache-php-56/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-56/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-56.yml docker-compose.yml && make upb
+      run: cp mysql.env.example mysql.env && cp docker/nginx/config/templates/site.test.conf-apache-php-56 docker/nginx/config/default.conf && sed -i 's/server_name site.test/server_name _/g' docker/nginx/config/default.conf && cp docker/apache-php-56/config/templates/site.test.conf docker/apache-php-56/config/sites-enabled/default.conf && sed -i 's/ServerName site.test/ /g' docker/apache-php-56/config/sites-enabled/default.conf && cp templates/docker-compose-apache-php-56.yml docker-compose.yml.bk && make upb
     - name: Test Nginx localhost
       run: docker run --network container:docker-compose-php_nginx_1 appropriate/curl -s --retry 1 --retry-connrefused http://super:demo@localhost/ | grep '5.6'
     - name: Stop containers
